# StageShip

./: LICENSE  README.md  pyproject.toml
examples/: sandbox.usda
examples/external_files/: geometry.usda
src/stageship/: cli.py
src/stageship/core/: analyse.py  package.py
src/stageship/helpers/: dependency_data.py
stageship/: cli.py
stageship/core/: analyse.py  flatten.py  package.py  ship.py  torrent.py
stageship/helpers/: confirmation.py  dependency_data.py
